--- a/Mapchain/app/build.gradle
+++ b/Mapchain/app/build.gradle
@@ -10,6 +10,10 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -19,7 +23,7 @@ android {
 }
 
 dependencies {
-    implementation ('org.web3j:core-android:2.2.1')
+    implementation ('org.web3j:core:3.3.1-android')
     implementation 'com.google.maps.android:android-maps-utils:0.5+'
     implementation 'com.android.support:recyclerview-v7:27.1.+'
     implementation 'com.android.support:cardview-v7:27.1.+'
