--- a/Mapchain/app/src/main/AndroidManifest.xml
+++ b/Mapchain/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyD0qmflsFiOucqTPLSMplui3ibWr83f4sU" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+                  >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
